Add movie function
